tests/vendor/valid/trivial/lt_true.c
//expect 1
//tags: trivial, binary, logical
int main() {
    return 1 < 2;
}