tests/vendor/invalid/syntax/missing_second_op_2.c
//tags: trivial, binary, logical
int main() {
    return 2 && ~;
}